; ModuleID = '/home/carl/AnghaBench/raspberry-pi-os/exercises/lesson01/4/bl4ckout31/src/extr_uart.c_uart_recv.c'
source_filename = "/home/carl/AnghaBench/raspberry-pi-os/exercises/lesson01/4/bl4ckout31/src/extr_uart.c_uart_recv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@U_FR_REG = common dso_local global i32 0, align 4
@U_DATA_REG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i8 @uart_recv() #0 {
  br label %1

1:                                                ; preds = %6, %0
  %2 = load i32, i32* @U_FR_REG, align 4
  %3 = call i32 @get32(i32 %2)
  %4 = and i32 %3, 16
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %1

7:                                                ; preds = %1
  %8 = load i32, i32* @U_DATA_REG, align 4
  %9 = call i32 @get32(i32 %8)
  %10 = and i32 %9, 255
  %11 = trunc i32 %10 to i8
  ret i8 %11
}

declare dso_local i32 @get32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
